datamodel/objects/Movie_Review__c/fields/Original_Rating__c.field-meta.xml
<CustomField>
    <fullName>Original_Rating__c</fullName>
    <label>Original Rating</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>RatingPicklist</valueSetName>
    </valueSet>
</CustomField>