datamodel/objects/Movie_Review__c/fields/Review__c.field-meta.xml
<CustomField>
    <fullName>Review__c</fullName>
    <label>Review</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>