datamodel/objects/Movie_Review__c/fields/Visibility__c.field-meta.xml
<CustomField>
    <fullName>Visibility__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Visibility</label>
    <type>Checkbox</type>
</CustomField>