datamodel/objects/Movie_Review__c/validationRules/Review_Permission.validationRule-meta.xml
<ValidationRule>
    <fullName>Review_Permission</fullName>
    <active>true</active>
    <errorConditionFormula>$Permission.May_Change_Review  = FALSE  &amp;&amp; ISCHANGED(Rating__c) &amp;&amp; NOT(ISNEW())</errorConditionFormula>
    <errorDisplayField>Rating__c</errorDisplayField>
    <errorMessage>You dont have permissions to change this field.</errorMessage>
</ValidationRule>